src/objects/Loan_New__c.object
<CustomObject>
    <fields>
        <fullName>PipeLine_BestContact__c</fullName>
        <label>PipeLine_BestContact*</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PipeLine_OtherContactFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PipeLineOtherContactFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_Suspense_Call_Date__c</fullName>
        <label>Post Suspense Call Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Post_Suspense_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Suspense Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Name__c</fullName>
        <formula>IF(  
 ISPICKVAL(Preferred_Contact_Type__c, 'Loan Officer'), HYPERLINK("/"+ LoanOfficer__c , LoanOfficer__r.FirstName + " " + LoanOfficer__r.LastName), 
IF(  
 ISPICKVAL(Preferred_Contact_Type__c, 'Loan Processor'), HYPERLINK("/"+ Loan_Processor__c , Loan_Processor__r.FirstName + " " + Loan_Processor__r.LastName),'No Preferred Contact'))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preferred Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Type__c</fullName>
        <label>Preferred Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Loan Officer</fullName>
                </value>
                <value>
                    <fullName>Loan Processor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Present_Market_Value__c</fullName>
        <label>Present Market Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProceedsAvailableFirstYear__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ProceedsAvailableFirstYear*</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property_Charge_Payment_History_Result__c</fullName>
        <label>Property Charge Payment History Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Held_as__c</fullName>
        <label>Property Held as</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fee Simple</fullName>
                </value>
                <value>
                    <fullName>Leasehold</fullName>
                </value>
                <value>
                    <fullName>Life Estate</fullName>
                </value>
	    	<value>
                    <fullName>Living Trust</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Title_is_Held_in_These_Names__c</fullName>
        <label>Property Title is Held in These Names</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property Expenses As Percent Of Income</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Price__c</fullName>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Loan__c</fullName>
        <inlineHelpText>User can select more than one option. Please hold the Ctrl button on the keyboard to select more than one option.</inlineHelpText>
        <label>Purpose of Loan</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Additional Income</fullName>
                </value>
                <value>
                    <fullName>Home Improvement</fullName>
                </value>
                <value>
                    <fullName>Payment of Taxes</fullName>
                </value>
                <value>
                    <fullName>Payment of Insurance</fullName>
                </value>
                <value>
                    <fullName>Leisure</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Extinguish Forward Mortgage</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <label>Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ARM</fullName>
                    <default>true</default>
                    <label>ARM</label>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Fixed Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReDisclosure_Reason__c</fullName>
        <inlineHelpText>This field gets cleared after saving the record. To view the details and reason, please go into the ReDisclosure History related list.</inlineHelpText>
        <label>ReDisclosure Reason*</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add a Non-Borrowing Spouse</fullName>
                </value>
                <value>
                    <fullName>Appraisal Received</fullName>
                </value>
                <value>
                    <fullName>Add Borrower</fullName>
                </value>
                <value>
                    <fullName>Remove Borrower</fullName>
                </value>
                <value>
                    <fullName>Reduce Origination Fee</fullName>
                </value>
                <value>
                    <fullName>Title Fees Received</fullName>
                </value>
                <value>
                    <fullName>Act of God, war, disaster or other emergency</fullName>
                </value>
                <value>
                    <fullName>Other New information particular to the client or transaction</fullName>
                </value>
                <value>
                    <fullName>Other circumstance that is particular to the client or transaction</fullName>
                </value>
                <value>
                    <fullName>Inaccurate information about the client or transaction</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Re_disclosure_Date__c</fullName>
        <label>Re-disclosure Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Real_Estate_Taxes__c</fullName>
        <label>Monthly Real Estate Taxes</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recent_Re_disclosure_Date__c</fullName>
        <inlineHelpText>To view the Re-disclosure history, please see the Re-disclosure History section under Related.</inlineHelpText>
        <label>Recent Re-disclosure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_Individual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Individual</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Alternative_Contact__c</fullName>
        <label>Relationship to Alternative Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Sister</fullName>
                </value>
                <value>
                    <fullName>Brother</fullName>
                </value>
                <value>
                    <fullName>Aunt</fullName>
                </value>
                <value>
                    <fullName>Uncle</fullName>
                </value>
                <value>
                    <fullName>Niece</fullName>
                </value>
                <value>
                    <fullName>Nephew</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Grandchild</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remove_Dups_Loans__c</fullName>
        <formula>1</formula>
        <label>Remove Dups Loans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RepairEstimate__c</fullName>
        <label>RepairEstimate*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Residence_Type__c</fullName>
        <label>Residence Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Investment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Residential_Income_Required__c</fullName>
        <label>Residual l Income Required*</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Residual_Income_Fulfilled__c</fullName>
        <label>Percent Of Residual Income Fulfilled*</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sale_Date__c</fullName>
        <label>Sale Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sale_Proceeds__c</fullName>
        <label>Sale Proceeds</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scheduled_Closing_Date__c</fullName>
        <label>Scheduled Closing Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source_Of_Funds__c</fullName>
        <label>Source Of Funds</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sale Of Other Property</fullName>
                </value>
                <value>
                    <fullName>Assets</fullName>
                </value>
                <value>
                    <fullName>Gift</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Square_Footage__c</fullName>
        <label>Square Footage</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Of_Current_Address__c</fullName>
        <label>Status Of Current Address</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>For Sale</fullName>
                </value>
                <value>
                    <fullName>Keeping Property</fullName>
                </value>
                <value>
                    <fullName>Currently Renting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubjectPropertyFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SubjectPropertyFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tell_the_story__c</fullName>
        <label>Tell the story</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>This_application_was_taken_by__c</fullName>
        <label>This application was taken by</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Face to Face</fullName>
                </value>
                <value>
                    <fullName>Telephone Interview</fullName>
                </value>
                <value>
                    <fullName>By the applicant and submitted by fax or mail</fullName>
                </value>
                <value>
                    <fullName>By the applicant and submitted via email or the Internet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title_Ordered_Date__c</fullName>
        <label>Title Ordered Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title_Received_Date__c</fullName>
        <label>Title Received Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Asset__c</fullName>
        <formula>Adjusted_Discount__c  + Discounted_Value__c +  Gross_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Expenses__c</fullName>
        <label>Total Expenses*</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Income__c</fullName>
        <label>Total Income For Each Client*</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Property_Charge__c</fullName>
        <formula>Total_Property_Charges__c +  Property__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Monthly Property Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Property_Charges__c</fullName>
        <label>Total Property Charges</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Underwriting_clear_to_close_date__c</fullName>
        <label>Underwriting clear to close date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Using_Title_Source_as_the_Closing_Agent__c</fullName>
        <inlineHelpText>Using AmRock as the Closing Agent/Escrow Officer and Title Company?</inlineHelpText>
        <label>Using AmRock as the Closing Agent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Waiting_for_Full_App_Date__c</fullName>
        <label>Waiting for Full App Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year_Built__c</fullName>
        <label>Year Built</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HeloMargin__c</fullName>
        <label>HeloMargin</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Loan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HECM</fullName>
                </value>
                <value>
                    <fullName>HELO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SentToBayDocs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>App Package Request has been sent to Baydocs</description>
        <inlineHelpText>App Package Request has been sent to Baydocs</inlineHelpText>
        <label>Sent to BayDocs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Servicing_Fee__c</fullName>
        <label>Servicing Fee</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TitleFeeEstimateResponse__c</fullName>
        <description>Saved response from TitleFee response for reuse by Baydocs request.</description>
        <inlineHelpText>Saved response from TitleFee response for reuse by Baydocs request.</inlineHelpText>
        <label>TitleFeeEstimateResponse</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TitleFeeIsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Title Fee Is Complete - Set when Title Fees are successfully returned from Amrock Service</description>
        <inlineHelpText>Title Fee Is Complete - Set when Title Fees are successfully returned from Amrock Service</inlineHelpText>
        <label>Title Fee is Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wholesale</fullName>
                    <default>true</default>
                    <label>Wholesale</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closing_Month__c</fullName>
        <description>This field is used to evaluate month from Actual Closing date</description>
        <formula>CASE(MONTH(Closing_Date__c),
1, "January",
2, "February",
3, "March", 
4, "April", 
5, "May", 
6, "June",
7, "July",
8, "August",
9, "September",
10, "October",
11, "November",
12, "December",
"None") &amp;"  "&amp; TEXT(YEAR(Closing_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closing Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FHA_Case_Transfer_Date__c</fullName>
        <label>FHA Case Transfer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <label>Goal</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Chatter_Activity_By__c</fullName>
        <label>Last Chatter Activity By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Chatter_Activity__c</fullName>
        <label>Last Chatter Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Loan_Officer_Phone_Main__c</fullName>
        <label>Loan Officer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Loan_Officer_Phone__c</fullName>
        <description>Do not delete! it is not a duplicate field. this is referenced for Click to call Loan Officer Phone field.</description>
        <formula>LoanOfficer__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Officer Phone F</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Processor_Phone_Main__c</fullName>
        <label>Loan Processor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Loan_Processor_Phone__c</fullName>
        <description>Do not delete! it is not a duplicate field. this is referenced for Click to call Loan Processor Phone field.</description>
        <formula>Loan_Processor__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Processor Phone F</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Contact_Name_2__c</fullName>
        <label>Other Contact Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Contact_Name__c</fullName>
        <label>Other Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Contact_Phone_2__c</fullName>
        <label>Other Contact Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_Contact_Phone__c</fullName>
        <label>Other Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_Contact_Type_2__c</fullName>
        <label>Other Contact Type 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Contact_Type__c</fullName>
        <label>Other Contact Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DELETE</description>
        <label>update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Banner__c</fullName>
        <label>Banner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <label>Internal Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Application_Approved_Not_Accepted_Date__c</fullName>
        <label>Application Approved Not Accepted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>File_Closed_for_Incompleteness_Date__c</fullName>
        <label>File Closed for Incompleteness Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QLMS_AE__c</fullName>
        <formula>Related_Partner__r.QLMS_Account_Executive__r.Name</formula>
        <label>QLMS AE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AE_On_Close__c</fullName>
        <label>AE On Close</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docs_Out_to_Settlement_Agent_Date__c</fullName>
        <label>Docs Out to Settlement Agent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Application_Disclosure_Signed_Date__c</fullName>
        <description>Application Disclosure Signed Date</description>
        <label>Application Disclosure Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Expiration_Date__c</fullName>
        <formula>Credit_Report_Date__c + 91</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Who_Requested_the_Withdraw__c</fullName>
        <label>Who Requested the Withdraw?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_was_the_Withdrawn_status_captured__c</fullName>
        <label>How was the Withdrawn status captured?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LoanStatus__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ORMS Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Withdrawn_Reason__c</fullName>
        <label>Withdrawn Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LoanStatus__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Another Lender - Better program/process</fullName>
                </value>
                <value>
                    <fullName>Another Lender - Better rate and/or fees</fullName>
                </value>
                <value>
                    <fullName>Another Lender - Realtor/builder referral</fullName>
                </value>
                <value>
                    <fullName>Client not Interested</fullName>
                </value>
                <value>
                    <fullName>Chose Another Lender</fullName>
                </value>
                <value>
                    <fullName>Loan no longer needed</fullName>
                </value>
                <value>
                    <fullName>No longer makes sense for Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>TEXT ( Related_Partner__r.AE_Partner_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Incomplete_Date__c</fullName>
        <description>Partner has started app but has not submitted request for app</description>
        <label>App Incomplete Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>App_Requested_Date__c</fullName>
        <description>Partner has requested application</description>
        <label>App Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>App_To_Folder_Days__c</fullName>
        <formula>In_Underwriting_Review_Date__c   -    Waiting_for_Full_Package_Date0__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App To Folder Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clear_to_Close_Date__c</fullName>
        <label>Clear to Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closed_Awaiting_Funding_Date0__c</fullName>
        <label>Closed - Awaiting Funding Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Conditionally_Approved_Date0__c</fullName>
        <label>Conditionally Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Denied_Date0__c</fullName>
        <label>Denied Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Formula_Closed__c</fullName>
        <formula>IF(ISBLANK(  Closing_Date__c  ), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula: Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_HECM__c</fullName>
        <formula>IF ( OR
     (ISPICKVAL (Mortgage_Applied_for__c, "FHA Traditional HECM") , ISPICKVAL (Mortgage_Applied_for__c, "HECM for Purchase"), ISPICKVAL (Mortgage_Applied_for__c, "HECM to HECM Refinance")), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula: HECM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_HELO__c</fullName>
        <formula>IF ( OR
     (ISPICKVAL (Mortgage_Applied_for__c, "HELO for Purchase") , ISPICKVAL (Mortgage_Applied_for__c, "HELO Refinance")), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula: HELO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_In_Processing__c</fullName>
        <formula>IF(ISBLANK(   In_Underwriting_Review_Date__c   ), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula: FRC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_Inactive__c</fullName>
        <formula>IF ( OR
     (ISPICKVAL ( LoanStatus__c , "Application Approved but Not Accepted") , ISPICKVAL ( LoanStatus__c , "Denied"), ISPICKVAL ( LoanStatus__c , "File Closed for Incompleteness"),  ISPICKVAL ( LoanStatus__c , "Loan Rescinded"), ISPICKVAL ( LoanStatus__c , "Withdrawn")), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula: Inactive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_IsActive__c</fullName>
        <formula>IF ( OR
     (ISPICKVAL ( LoanStatus__c , "Suspended") , ISPICKVAL ( LoanStatus__c , "In Processing"), ISPICKVAL ( LoanStatus__c , "In Underwriting Review") , ISPICKVAL ( LoanStatus__c , "Conditionally Approved") , ISPICKVAL ( LoanStatus__c , "Clear to Close") , ISPICKVAL ( LoanStatus__c , "In Final HUD Review") , ISPICKVAL ( LoanStatus__c , "Docs Out to Settlement Agent") ), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula: In Processing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Processing_Date0__c</fullName>
        <label>In Processing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>In_Underwriting_Review_Date__c</fullName>
        <description>All Vendor Items ordered and UW begins review</description>
        <label>In Underwriting Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_AE_Call_to_Contact__c</fullName>
        <formula>Related_Individual__r.Last_Call__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last AE Call to Contact</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Funded_Date__c</fullName>
        <label>Loan Funded Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Loan_Received_Awaiting_Review__c</fullName>
        <description>APCS reviews to move to In Processing</description>
        <label>Loan Received - Awaiting Review</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Loan_Rescinded_Date__c</fullName>
        <description>Loan was Rescinded</description>
        <label>Loan Rescinded Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Loan_Status_Change_Date__c</fullName>
        <label>Loan Status Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Loan_Submitted_Incomplete__c</fullName>
        <description>AE or Processor identifies that at least one of minimum required docs are missing</description>
        <label>Loan Submitted - Incomplete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submitted_to_Lender_Date__c</fullName>
        <description>Partner submitted signed app and supporting documents</description>
        <label>Submitted to Lender Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Suspended_Date0__c</fullName>
        <label>Suspended Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Waiting_for_Full_Package_Date0__c</fullName>
        <label>Waiting for Full Package Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Withdrawn_Date0__c</fullName>
        <label>Withdrawn Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Appraisal_Addendum_Ordered__c</fullName>
        <label>Appraisal Addendum Ordered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appraisal_Addendum_Received__c</fullName>
        <label>Appraisal Addendum Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appraisal_Appt_Date__c</fullName>
        <description>Actual date of the appraisal appt</description>
        <inlineHelpText>Actual date of the appraisal appt</inlineHelpText>
        <label>Appraisal Appt Date</label>
        <type>Date</type>
    </fields>
</CustomObject>